Modules refactoring Api App Module Other gradle and service and controller improvements