@@ -22,21 +22,26 @@ repositories {
 bootRun {
     main = 'io.university.oracle.AppStarter'
 
+    args = ["--add-modules=java.xml.bind"]
+
     environment([
-            "ORA_USER": System.getenv("ORA_USER") ?: "sys as sysdba",
-            "ORA_PASS": System.getenv("ORA_PASS") ?: "Oradoc_db1",
-            "ORA_URL" : System.getenv("ORA_URL") ?: "jdbc:oracle:thin:@localhost:32769:ORCLCDB"
+            "SERVER_PORT": System.getenv("SERVER_PORT") ?: "8081",
+            "ORA_USER"   : System.getenv("ORA_USER") ?: "sys as sysdba",
+            "ORA_PASS"   : System.getenv("ORA_PASS") ?: "Oradoc_db1",
+            "ORA_URL"    : System.getenv("ORA_URL") ?: "jdbc:oracle:thin:@localhost:1521:ORCLCDB"
     ])
 }
 
 dependencies {
+    compile project(":app-api")
+
     compile "org.springframework.boot:spring-boot-starter-web:$springVersion"
     compile "org.springframework.boot:spring-boot-starter-data-jpa:$springVersion"
     compile "io.springfox:springfox-swagger2:$swaggerVersion"
     compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
     compile "com.github.goodforgod:dummymaker:$dummymakerVersion"
     compile "com.oracle:ojdbc7:$ojdbcVersion"
-    testImplementation  "junit:junit:$junitVersion"
-    testImplementation  "org.springframework.boot:spring-boot-starter-test:$springVersion"
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation "org.springframework.boot:spring-boot-starter-test:$springVersion"
 }
 
