@@ -18,21 +18,26 @@ repositories {
 bootRun {
     main = 'io.university.postgres.AppStarter'
 
+    args = ["--add-modules=java.xml.bind"]
+
     environment([
-            "PG_USER": System.getenv("PG_USER") ?: "postgres",
-            "PG_PASS": System.getenv("PG_PASS") ?: "postgres",
-            "PG_URL" : System.getenv("PG_URL") ?: "jdbc:postgresql://localhost:5432/aggregator?createDatabaseIfNotExist=true"
+            "SERVER_PORT": System.getenv("SERVER_PORT") ?: "8082",
+            "PG_USER"    : System.getenv("PG_USER") ?: "postgres",
+            "PG_PASS"    : System.getenv("PG_PASS") ?: "postgres",
+            "PG_URL"     : System.getenv("PG_URL") ?: "jdbc:postgresql://localhost:5432/postgres?createDatabaseIfNotExist=true"
     ])
 }
 
 dependencies {
+    compile project(":app-api")
+
     compile "org.springframework.boot:spring-boot-starter-web:$springVersion"
     compile "org.springframework.boot:spring-boot-starter-data-jpa:$springVersion"
     compile "io.springfox:springfox-swagger2:$swaggerVersion"
     compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
     compile "com.github.goodforgod:dummymaker:$dummymakerVersion"
     compile "org.postgresql:postgresql:$pgjdbcVersion"
-    testImplementation  "junit:junit:$junitVersion"
-    testImplementation  "org.springframework.boot:spring-boot-starter-test:$springVersion"
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation "org.springframework.boot:spring-boot-starter-test:$springVersion"
 }
 
